# tap-bitly

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml  tox.ini
.github/: dependabot.yml  renovate.json5  zizmor.yaml
.github/workflows/: constraints.txt  release.yaml  test.yaml  test.yml  update_catalog.yml
scripts/: update_openapi.py
tap_bitly/: __init__.py  client.py  streams.py  tap.py
tap_bitly/openapi/: __init__.py  openapi.json
tests/: __init__.py  conftest.py  test_core.py  test_schema_evolution.py
tests/__snapshots__/test_schema_evolution/: test_catalog_changes[bitlinks].json  test_catalog_changes[bsds].json  test_catalog_changes[campaigns].json  test_catalog_changes[channels].json  test_catalog_changes[daily_bitlink_clicks].json  test_catalog_changes[groups].json  test_catalog_changes[monthly_bitlink_clicks].json  test_catalog_changes[montly_bitlink_clicks].json  test_catalog_changes[organizations].json
