[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "tap-bitly"
description = "Singer tap for Bitly, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "Bitly",
  "ELT",
  "singer.io",
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.55.0a2",
]
[[project.authors]]
name = "Edgar Ramirez-Mondragon"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramirez-Mondragon"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-bitly = "tap_bitly.tap:TapBitly.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-bitly#readme"
Homepage = "https://github.com/reservoir-data/tap-bitly"
Source = "https://github.com/reservoir-data/tap-bitly"

[dependency-groups]
dev = [
  "deptry>=0.25",
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "pytest>=9",
  "pytest-github-actions-annotate-failures>=0.3",
  "singer-sdk[testing]",
  "syrupy>=5",
]
typing = [
  "mypy>=2.1",
  "ty>=0.0.50",
]

[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.10"
prerelease = "allow"

[tool.ruff]
line-length = 88
preview = true
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.typos.files]
extend-exclude = [ "tap_bitly/openapi/openapi.json" ]

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_unused_configs = true

[tool.pytest]
addopts = [
  "-v",
  "-ra",
]
filterwarnings = [
  "error",
  "default:No records were available to test:UserWarning",
  "default:No records returned in stream 'bsds':UserWarning",
  "default:No records returned in stream 'campaigns':UserWarning",
  "default:No records returned in stream 'channels':UserWarning",
  "default:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]

[tool.tox]
requires = [ "tox>=4.55", "tox-uv>=1.35" ]
env_list = [
  "dependencies",
  "test",
  "typing",
]
[tool.tox.env.dependencies]
description = "check for unused, missing and transitive dependencies"
dependency_groups = [ "dev" ]
commands = [ [ "deptry", "." ] ]
labels = [ "check" ]
[tool.tox.env.test]
description = "run tests on Python {py_dot_ver}"
base_python_file = [ ".python-version" ]
[tool.tox.env.typing]
description = "type checks"
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "ty", "check" ],
  [ "mypy", "tap_bitly", "tests" ],
]
labels = [ "check" ]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
dependency_groups = [ "testing" ]
pass_env = [ "TAP_BITLY_*" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]
